Mark methods as non thread safe

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### build ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -38,3 +39,6 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### temp ###
+notes
